--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.32.0
 pandas==2.2.0
 numpy==1.26.4
-keras==2.15.0
+tensorflow==2.15.0
 scikit-learn==1.4.0
 joblib==1.3.2
 xgboost==2.0.3
