--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit==1.32.0
 pandas==2.2.0
 numpy==1.26.4
-tensorflow==2.15.0
+tensorflow-cpu==2.15.0
 scikit-learn==1.4.0
 joblib==1.3.2
 xgboost==2.0.3
 plotly==5.18.0
 h5py==3.10.0
+protobuf==3.20.3
